# AutoNeuroNet

./: .gitignore  404.html  CMakeLists.txt  Makefile  Matrix.cpp  README.md  Var.cpp  Var.hpp  autodiff_binded.py  automatic_differentiation  automatic_differentiation.cpp  automatic_differentiation_notes.md  build_pybind.sh  index.html  linear_regression  linear_regression.cpp  linear_regression_demo.ipynb  matrices  matrices.cpp  mkdocs.yml  mnist_demo.ipynb  moons_classification_demo.ipynb  neural_network.ipynb  numeric_differentiation  numeric_differentiation.cpp  numeric_differentiation.py  plot.ppm  pybind_wrapper.cpp  pyproject.toml  requirements.txt  testing.py
.github/workflows/: docs.yml  wheels.yml
api/: index.html
demos/: automatic_differentiation  automatic_differentiation.cpp  gradient_descent_3d.py  linear_regression  linear_regression.cpp  linear_regression_demo.ipynb  mnist_demo.ipynb  moons_classification_demo.ipynb  numeric_differentiation  numeric_differentiation.cpp
docs/: api.md  index.md  install.md  quickstart.md
include/: LossFunctions.hpp  Matrix.hpp  NeuralNetwork.hpp  Optimizers.hpp  Tensor.hpp  Var.hpp
include/autodiff/: Matrix.hpp
install/: index.html
python/autoneuronet/: __init__.py  __init__.pyi
quickstart/: index.html
src/: LossFunctions.cpp  Matrix.cpp  NeuralNetwork.cpp  OldVar.cpp  Optimizers.cpp  Tensor.cpp  Var.cpp  main.cpp
src/autodiff/: Matrix.cpp  Var.cpp
